fix #search-container misalignment
currently just commented out. need to delete later.

--- a/css/nal_header.css
+++ b/css/nal_header.css
@@ -56,7 +56,7 @@
     header #advanced-form > p:nth-child(2),
     #site-title,
     #nal-logos,
-    #search-container,
+    /*#search-container,*/
     #sub-nav-container,
     #header_logo_site_info,
     .header__secondary-menu {
@@ -140,7 +140,7 @@
     header #advanced-form > p:nth-child(2),
     #site-title,
     #nal-logos,
-    #search-container,
+    /*#search-container,*/
     #sub-nav-container,
     #header_logo_site_info,
     .header__secondary-menu {
